# audio-echo

./: .gitignore  README.md  local.properties
app/src/main/cpp/: CMakeLists.txt  audio_main.cpp  audio_player.cpp  jni_helper.cpp  jni_helper.h
app/src/main/cpp/oboe/: Doxyfile  README.md
app/src/main/cpp/oboe/apps/OboeTester/docs/: AutomatedTesting.md  Usage.md
app/src/main/cpp/oboe/apps/fxlab/: README.md
app/src/main/cpp/oboe/apps/fxlab/docs/: Dev-Guide.md
app/src/main/cpp/oboe/docs/: AndroidAudioHistory.md  AppsUsingOboe.md  FAQ.md  FullGuide.md  GettingStarted.md  OpenSLESMigration.md  index.md
app/src/main/cpp/oboe/docs/notes/: effects.md  rlsbuffer.md
app/src/main/cpp/oboe/docs/reference/: _audio_stream_8h_source.html  _audio_stream_base_8h_source.html  _audio_stream_builder_8h_source.html  _audio_stream_callback_8h_source.html  _definitions_8h_source.html  _latency_tuner_8h_source.html  _oboe_8h_source.html  _result_with_value_8h_source.html  _stabilized_callback_8h_source.html  _utilities_8h_source.html  _version_8h_source.html  annotated.html  classes.html  classoboe_1_1_audio_stream-members.html  classoboe_1_1_audio_stream.html  classoboe_1_1_audio_stream_base-members.html  classoboe_1_1_audio_stream_base.html  classoboe_1_1_audio_stream_builder-members.html  classoboe_1_1_audio_stream_builder.html  classoboe_1_1_audio_stream_callback-members.html  classoboe_1_1_audio_stream_callback.html  classoboe_1_1_default_stream_values-members.html  classoboe_1_1_default_stream_values.html  classoboe_1_1_latency_tuner-members.html  classoboe_1_1_latency_tuner.html  classoboe_1_1_result_with_value-members.html  classoboe_1_1_result_with_value.html  classoboe_1_1_stabilized_callback-members.html  classoboe_1_1_stabilized_callback.html  deprecated.html  dir_768f6301d9838e45d679001914ab2803.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_enum.html  (+12 more)
app/src/main/cpp/oboe/include/oboe/: AudioStream.h  AudioStreamBase.h  AudioStreamBuilder.h  AudioStreamCallback.h  Definitions.h  LatencyTuner.h
app/src/main/cpp/oboe/samples/: README.md  settings.gradle
app/src/main/cpp/oboe/samples/LiveEffect/: README.md  build.gradle
app/src/main/cpp/oboe/samples/LiveEffect/src/main/: AndroidManifest.xml
app/src/main/cpp/oboe/samples/MegaDrone/: README.md
app/src/main/cpp/oboe/samples/RhythmGame/: CMakeLists.txt  README.md
app/src/main/cpp/oboe/samples/drumthumper/: README.md
app/src/main/cpp/oboe/samples/hello-oboe/: README.md  build.gradle
app/src/main/cpp/oboe/samples/hello-oboe/src/main/: AndroidManifest.xml
app/src/main/cpp/oboe/samples/iolib/: README.md
app/src/main/cpp/oboe/samples/parselib/: README.md
app/src/main/cpp/oboe/samples/shared/: DefaultAudioStreamCallback.h  IRestartable.h  TappableAudioSource.h
app/src/main/cpp/oboe/src/aaudio/: AudioStreamAAudio.cpp
app/src/main/cpp/oboe/src/common/: AudioStreamBuilder.cpp  FilterAudioStream.h  FixedBlockReader.h  FixedBlockWriter.h  StabilizedCallback.cpp  Utilities.cpp  Version.cpp
app/src/main/cpp/oboe/src/flowgraph/: FlowGraphNode.h
app/src/main/cpp/oboe/src/opensles/: AudioInputStreamOpenSLES.cpp  AudioOutputStreamOpenSLES.cpp  OpenSLESUtilities.h
app/src/main/cpp/oboe/tests/: testStreamClosedMethods.cpp
app/src/main/cpp/src/: audio_echo_transport.cpp  audio_echo_transport.h  audio_jni.cpp  debug_utils.cpp  wav_recorded_data_writer_audio_transport.cpp  wav_recorded_data_writer_audio_transport.h
app/src/main/cpp/src/audio/: audio_device_buffer.cpp  audio_device_buffer.h  audio_device_defines.h  audio_effect.cpp  audio_effect.h  buf_manager.h  opensles_player.cpp  opensles_recorder.cpp  wav_header.cpp  wav_header.h  wav_pcm_file_writer.cpp  wav_pcm_file_writer.h
app/src/main/cpp/src/audio/oboe_audio/: oboe_player.cpp  oboe_player.h  oboe_recorder.cpp  oboe_recorder.h
(+63 files in other folders)
